--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "Práctica de recuperación de Diseño de Interfaces Web, 1º trimestre.",
   "main": "index.js",
   "scripts": {
+    "start": "vite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3"
+  },
+  "devDependencies": {
+    "sass": "^1.83.0",
+    "vite": "^6.0.7"
   }
 }
